--- a/devslopes-social/Base.lproj/Main.storyboard
+++ b/devslopes-social/Base.lproj/Main.storyboard
@@ -283,13 +283,17 @@
                                     <stackView opaque="NO" contentMode="scaleToFill" distribution="fillProportionally" alignment="center" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="NK4-7F-jfH">
                                         <rect key="frame" x="8" y="8" width="327" height="44"/>
                                         <subviews>
-                                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="add-image" translatesAutoresizingMaskIntoConstraints="NO" id="neH-Y8-hWi" customClass="CircleView" customModule="devslopes_social" customModuleProvider="target">
+                                            <imageView clipsSubviews="YES" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="add-image" translatesAutoresizingMaskIntoConstraints="NO" id="neH-Y8-hWi" customClass="CircleView" customModule="devslopes_social" customModuleProvider="target">
                                                 <rect key="frame" x="0.0" y="4.5" width="35" height="35"/>
                                                 <color key="backgroundColor" red="0.0086578819900751114" green="0.44696283340454102" blue="0.75309842824935913" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                <gestureRecognizers/>
                                                 <constraints>
                                                     <constraint firstAttribute="width" constant="35" id="dvV-XW-Sdi"/>
                                                     <constraint firstAttribute="height" constant="35" id="t1w-XI-3Sw"/>
                                                 </constraints>
+                                                <connections>
+                                                    <outletCollection property="gestureRecognizers" destination="If7-ig-4BQ" appends="YES" id="QEb-XL-hAb"/>
+                                                </connections>
                                             </imageView>
                                             <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Zdi-M2-FFd" customClass="FancyField" customModule="devslopes_social" customModuleProvider="target">
                                                 <rect key="frame" x="45" y="7" width="237" height="30"/>
@@ -336,6 +340,7 @@
                         </constraints>
                     </view>
                     <connections>
+                        <outlet property="addImage" destination="neH-Y8-hWi" id="rU5-c2-pw2"/>
                         <outlet property="tableView" destination="JBG-t5-32a" id="kmK-0A-xv9"/>
                         <segue destination="BYZ-38-t0r" kind="show" identifier="goToSignIn" id="gNg-xu-1bL"/>
                     </connections>
@@ -346,8 +351,13 @@
                         <action selector="signOutTapped:" destination="iVo-1l-QI4" id="ZTS-5W-dyF"/>
                     </connections>
                 </tapGestureRecognizer>
+                <tapGestureRecognizer id="If7-ig-4BQ">
+                    <connections>
+                        <action selector="addImageTapped:" destination="iVo-1l-QI4" id="LRA-JP-aiA"/>
+                    </connections>
+                </tapGestureRecognizer>
             </objects>
-            <point key="canvasLocation" x="1133.5999999999999" y="199.25037481259372"/>
+            <point key="canvasLocation" x="2487" y="221"/>
         </scene>
     </scenes>
     <resources>
